@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-07-18T08:13:28Z",
+  "timestamp" : "2022-07-18T16:14:22Z",
   "count_outdated" : 427,
   "uniques_outdated" : 31,
-  "count" : 439,
+  "count" : 440,
   "uniques" : 36,
   "views" : [
     {
@@ -35,8 +35,8 @@
     },
     {
       "timestamp": "2022-07-18T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
